Fix about page tech tile section not rendering on mobile

--- a/slacklinegroups/app/assets/stylesheets/about.scss
+++ b/slacklinegroups/app/assets/stylesheets/about.scss
@@ -92,28 +92,8 @@ div[data-react-class="scenes/about"] {
       margin: 10px 0;
 
       img {
-        width: 100%;
+        max-height: 100%;
       }
-
-      // img {
-      //   max-width: 100%;
-      //   max-height: 100%;
-      //   height: 100%;
-      // }
-
-      // @media (max-width: 960px) {
-      //   max-height: 40px;
-      // }
-
-      // @media (max-width: 600px) {
-      //   max-width: 80px;
-      //   margin: 2px;
-
-      //   div:first-of-type img {
-      //     width: 100%;
-      //     height: initial;
-      //   }
-      // }
     }
   }
 
@@ -121,11 +101,11 @@ div[data-react-class="scenes/about"] {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 30px;
+    margin-top: 50px;
+    margin-bottom: 100px;
 
     .hostedTile {
       display: flex;
-      margin-bottom: 30px;
       justify-content: center;
       align-items: center;
 
@@ -135,6 +115,10 @@ div[data-react-class="scenes/about"] {
         img {
           max-width: 100%;
         }
+      }
+
+      @media (max-width: 960px) {
+        margin-bottom: 30px;
       }
     }
 
